--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
       - run: cat archivo.txt
       - run: echo "hola workflow desde job 2"      
-      - run: echo "Final"
+      - run: echo "Final A"
 
  
